<resources>
    <string name="app_name">Reference Browser</string>
    <string name="toolbar_hint">Search or enter address</string>
    <string name="menu_action_add_tab">Add New Tab</string>
    <string name="menu_action_close_tabs">Close All Tabs</string>
    <string name="menu_action_close_tabs_private">Close Private Tabs</string>
    <string name="preferences_sign_in_summary">Sync your history</string>
    <string name="preferences_pair_sign_in_summary">Pair with Firefox Desktop</string>
    <string name="preferences_use_telemetry_summary">Send usage data</string>
    <string name="preferences_make_default_browser">Make default browser</string>
    <string name="preferences_sync_history">History</string>
    <string name="preferences_remote_debugging">Remote debugging via USB</string>
    <string name="preferences_tracking_protection_normal">Enable in Normal Browsing Mode</string>
    <string name="preferences_tracking_protection_private">Enable in Private Browsing Mode</string>
    <string name="preferences_about_page">About Reference Browser</string>
    <string name="sign_in">Sign in</string>
    <string name="pair_sign_in">Sign in with a QR code</string>
    <string name="firefox_account">Firefox Account</string>
    <string name="sign_out">Sign out</string>
    <string name="sync_now">Sync now</string>
    <string name="syncing">Syncing</string>
    <string name="preferences_sync_failed_summary">Sync failed. Last success: %s</string>
    <string name="preferences_sync_failed_never_synced_summary">Sync failed. Last synced: never</string>
    <string name="preferences_sync_last_synced_summary">Last synced: %s</string>
    <string name="preferences_sync_never_synced_summary">Last synced: never</string>
    <string name="privacy">Privacy</string>
    <string name="preferences_privacy_summary">Tracking, cookies, data choices</string>
    <string name="sync_category">Choose what to sync</string>
    <string name="developer_tools_category">Developer tools</string>
    <string name="use_telemetry">Use Telemetry</string>
    <string name="mozilla_category">Mozilla</string>
    <string name="tracker_category">Tracking Protection</string>
    <string name="data_choices_category">Data Choices</string>
    <string name="settings">Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="privacy_settings">隐私设置</string>
    <string name="pair_preferences">Pairing</string>
    <string name="pair_instructions">Open firefox.com/pair in Firefox Desktop for your pairing code</string>
    <string name="crash_report_non_fatal_message">Sorry. We crashed</string>
    <string name="crash_report_non_fatal_action">Report</string>
    <string name="private_browsing_title">Private Browsing</string>
    <string name="private_browsing_body"><![CDATA[
<h1>Private Browsing</h1>
<p>When you browse in a Private Window, Reference Browser <strong>does not save</strong>:</p>
<ul class="two-column">
    <li>visited pages</li>
    <li>searches</li>
    <li>cookies</li>
    <li>temporary files</li>
</ul>
<p>Private Browsing <strong>doesn\'t make you anonymous</strong> on the Internet. Your employer or Internet service provider can still know what page you visit.</p>
<p class="about-info">Learn more about <a id="learnMore">Private Browsing</a>.</p>
     ]]></string>
    <string name="datareporting_notification_title">Reference Browser</string>
    <string name="datareporting_notification_summary">To improve your experience, Reference Browser automatically sends some information to Mozilla.</string>
    <string name="default_notification_channel">Browser</string>
    <string name="about_content"><![CDATA[
<p>%1$s puts you in control.</p>
<p>Use it as a reference to:
    <br>&bull; Learn how to build your own browser.
    <br>&bull; Contribute to making it easier to build browsers.
    <br>&bull; File bug reports!
</p>
<p>%1$s is produced by Mozilla. Our mission is to foster a healthy, open Internet.<br/>
    ]]></string>
    <string name="menu_share_with">Share with…</string>
    <string name="toast_copied">Copied!</string>
    <string name="search_engine">搜索引擎</string>
    <string name="normal_tab_page">普通标签页</string>
    <string name="google">Google</string>
    <string name="private_tab_page">隐私标签页</string>
    <string name="password">密码</string>
    <string name="basic">基本</string>
    <string name="notification">通知</string>
    <string name="home_page">主页</string>
    <string name="enable">启用</string>
    <string name="guide_page">欢迎之旅</string>
    <string name="appearance">外观</string>
    <string name="display">显示</string>
    <string name="control">控件</string>
    <string name="play_on_background">后台视频播放</string>
    <string name="close_all_tabs_when_quit">退出时关闭标签页</string>
    <string name="advance">高级</string>
    <string name="reward">奖励</string>
    <string name="sync">同步</string>
    <string name="accessibility">无障碍</string>
    <string name="site_settings">网站设置</string>
    <string name="language">语言</string>
    <string name="download_content">下载内容</string>
    <string name="about_browser">关于Stream</string>
    <string name="used_search_engine">最近使用过的搜索引擎</string>
    <string name="used_search_engine_key">used_search_engine_key</string>
    <string name="default_search_engine_key">default_search_engine_key</string>
    <string name="mozac_feature_customtabs_exit_button">返回之前的应用</string>
    <string name="mozac_feature_customtabs_share_link">分享链接</string>
    <string name="mozac_feature_pwa_default_shortcut_label">Website</string>
    <string name="mozac_feature_pwa_site_controls_notification_channel">Full screen site controls</string>
    <string name="mozac_feature_pwa_site_controls_notification_text">Tap to copy the URL for this app</string>
    <string name="mozac_feature_pwa_site_controls_refresh">Refresh</string>
    <string name="mozac_feature_pwa_copy_success">URL copied.</string>
    <string name="default_search_engine_category_key">default_search_engine_category_key</string>
    <string name="used_search_engine_category_key">used_search_engine_category_key</string>
    <string name="default_pref_screen_key">default_pref_screen_key</string>
    <string name="search">搜索</string>
    <string name="show_search_advice">显示搜索建议</string>
    <string name="pref_key_show_search_advice">pref_key_show_search_advice</string>
    <string name="pref_key_show_clip_board">pref_key_show_clip_board</string>
    <string name="show_clip_board">显示剪贴板建议</string>
    <string name="pref_key_search_browser_history">pref_key_search_browser_history</string>
    <string name="search_browser_history">搜索浏览历史</string>
    <string name="pref_key_search_bookmark">pref_key_search_bookmark</string>
    <string name="search_bookmark">搜索书签</string>
    <string name="pref_key_match_search_history">pref_key_match_search_history</string>
    <string name="pref_key_save_password">pref_key_save_password</string>
    <string name="match_search_history">匹配搜索记录</string>
    <string name="search_content">搜索内容</string>
    <string name="show_search_content">展示搜索内容</string>
    <string name="setting">设置</string>
    <string name="save_password">保存密码</string>
    <string name="pref_key_auto_login">pref_key_auto_login</string>
    <string name="auto_login">自动登录</string>
    <string name="auto_login_summary">使用存储和的凭证自动登录网站。当该功能处于停用 状态时，您每次都要通过验证才能登录网站</string>
    <string name="password_show_summary">已保存的密码将显示在这里</string>
    <string name="pref_key_password_category">pref_key_password_category</string>
    <string name="disable">禁用</string>
    <string name="export_password">导出密码...</string>
    <string name="question">查看</string>
    <string name="pref_key_main_page_open_close">pref_key_main_page_open_close</string>
    <string name="pref_key_main_page_url_display">pref_key_main_page_url_display</string>
    <string name="visit_this_site">打开此网页</string>
    <string name="close">关闭</string>
    <string name="main_page">主页</string>
    <string name="pref_key_main_page_url">pref_key_main_page_url</string>
    <string name="apperance">外观</string>
    <string name="pref_key_open_background_setting">pref_key_open_background_setting</string>
    <string name="pref_key_enable_bottom_bar">pref_key_enable_bottom_bar</string>
    <string name="theme_background">主题背景</string>
    <string name="enable_bottom_bar">启用底部工具栏</string>
    <string name="pref_key_show_reward_icon">pref_key_show_reward_icon</string>
    <string name="show_reward_icon">隐藏奖励图标</string>
    <string name="show_reward_icon_summary">当未启用奖励图标时隐藏奖励图标</string>
    <string name="pref_key_video_play_in_background_display">pref_key_video_play_in_background_display</string>
    <string name="play_video_in_background">后台视频播放</string>
    <string name="pref_key_video_play_in_background">pref_key_video_play_in_background</string>
    <string name="pref_key_https_everywhere">pref_key_https_everywhere</string>
    <string name="https_everywhere">HTTPS Everywhere</string>
    <string name="https_everywhere_summary">尽可能使用HTTPS而不是HTTP打开支持的网站</string>
    <string name="close_all_tabs_when_quit_summary">不要在两次浏览会话中保存标签页</string>
    <string name="pref_key_block_ad">pref_key_block_ad</string>
    <string name="block_ad">广告过滤</string>
    <string name="block_ad_summary">阻止广告加载</string>
    <string name="pref_key_finger_print_protect">pref_key_finger_print_protect</string>
    <string name="finger_print_protect">指纹保护</string>
    <string name="finger_print_protect_summary">阻止浏览器识别浏览指纹</string>
    <string name="font_size">文字大小</string>
    <string name="report">反馈</string>
    <string name="pref_key_report_display">pref_key_report_display</string>
    <string name="about">关于</string>
    <string name="pref_key_about_display">pref_key_about_display</string>
    <string name="clear_cache">清除缓存</string>
    <string name="pref_key_clear_cache_display">pref_key_clear_cache_display</string>
    <string name="pref_key_search_engine_display">pref_key_search_engine_display</string>
    <string name="pre_load">智能预加载网页</string>
    <string name="pref_key_pre_load_display">pref_key_pre_load_display</string>
    <string name="pref_key_font_size_settings_display">pref_key_font_size_settings_display</string>
    <string name="show_status_bar">显示状态栏</string>
    <string name="pref_key_show_status_bar">pref_key_show_status_bar</string>
    <string name="pref_key_toolbar_fix_at_bottom">pref_key_toolbar_fix_at_bottom</string>
    <string name="toolbar_fix_at_bottom">固定在底部</string>
    <string name="pref_key_scroll_up_to_home">pref_key_scroll_up_to_home</string>
    <string name="scroll_up_to_home">上滑回首页</string>
    <string name="pref_key_toolbar_style_display">pref_key_toolbar_style_display</string>
    <string name="toolbar_style_display">网页工具栏样式</string>
    <string name="pref_key_open_ad_block">pref_key_open_ad_block</string>
    <string name="open_ad_block">强力广告过滤模式</string>
    <string name="ad_block_rules">已经添加的广告规则</string>
    <string name="pref_key_ad_block_rules">pref_key_ad_block_rules</string>
    <string name="pref_key_forbid_3rd_cookies">pref_key_forbid_3rd_cookies</string>
    <string name="forbid_3rd_cookies">阻止第三方Cookie</string>
    <string name="pref_key_send_do_not_track">pref_key_send_do_not_track</string>
    <string name="send_do_not_track">发送\"Do Not Track\"请求</string>
    <string name="pref_key_clear_search_history">pref_key_clear_search_history</string>
    <string name="clear_search_history">输入(搜索)记录</string>
    <string name="pref_key_clear_account_password">pref_key_clear_account_password</string>
    <string name="clear_account_password">账号密码</string>
    <string name="pref_key_clear_cookies">pref_key_clear_cookies</string>
    <string name="clear_cookies">Cookies</string>
    <string name="pref_key_clear_history">pref_key_clear_history</string>
    <string name="clear_history">历史记录</string>
    <string name="pref_key_clear_cache_file">pref_key_clear_cache_file</string>
    <string name="clear_cache_file">缓存文件</string>
</resources>