<?xml version="1.0" encoding="utf-8"?>
<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->

<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
   <Preference
       android:layout="@layout/pref_simple_custom_item"
       android:key="@string/pref_key_clear_cache_display"
       android:title="@string/clear_cache"
       />
    <Preference
        android:layout="@layout/pref_simple_custom_item"
        android:key="@string/pref_key_search_engine_display"
        android:title="@string/search_engine"
        />
    <Preference
        android:layout="@layout/pref_simple_custom_item"
        android:key="@string/pref_key_pre_load_display"
        android:title="@string/pre_load"
        />
    <Preference
        android:layout="@layout/pref_simple_custom_item"
        android:key="@string/pref_key_font_size_settings_display"
        android:title="@string/font_size"
        />
    <Preference
        android:layout="@layout/pref_simple_custom_item"
        android:key="@string/pref_key_show_status_bar"
        android:title="@string/show_status_bar"
        />
    <Preference
        android:layout="@layout/pref_simple_custom_item"
        android:key="@string/pref_key_report_display"
        android:title="@string/report"
        />
    <Preference
        android:layout="@layout/pref_simple_custom_item"
        android:key="@string/pref_key_about_display"
        android:title="@string/about"
        />
</androidx.preference.PreferenceScreen>