<?xml version="1.0" encoding="utf-8"?><!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <CheckBoxPreference
    android:key="@string/pref_key_clear_search_history"
    android:layout="@layout/pref_simple_check_box_item"
    android:title="@string/clear_search_history"
    android:defaultValue="false"
    />
    <CheckBoxPreference
        android:key="@string/pref_key_clear_account_password"
        android:layout="@layout/pref_simple_check_box_item"
        android:title="@string/clear_account_password"
        android:defaultValue="false"
        />
    <CheckBoxPreference
        android:key="@string/pref_key_clear_cookies"
        android:layout="@layout/pref_simple_check_box_item"
        android:title="@string/clear_cookies"
        android:defaultValue="false"
        />
    <CheckBoxPreference
        android:key="@string/pref_key_clear_history"
        android:layout="@layout/pref_simple_check_box_item"
        android:title="@string/clear_history"
        android:defaultValue="false"
        />
    <CheckBoxPreference
        android:key="@string/pref_key_clear_cache_file"
        android:layout="@layout/pref_simple_check_box_item"
        android:title="@string/clear_cache_file"
        android:defaultValue="false"
        />
</androidx.preference.PreferenceScreen>