<?xml version="1.0" encoding="utf-8"?><!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <CheckBoxPreference
    android:key="@string/pref_key_open_ad_block"
    android:layout="@layout/pref_simple_switch_item"
    android:title="@string/open_ad_block"
    android:defaultValue="true"
    />
    <PreferenceCategory
        android:key="@string/pref_key_ad_block_rules"
        android:layout="@layout/pref_empty_category"
        android:title="@string/ad_block_rules"/>
</androidx.preference.PreferenceScreen>