<?xml version="1.0" encoding="utf-8"?><!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <CheckBoxPreference
    android:key="@string/pref_key_forbid_3rd_cookies"
    android:layout="@layout/pref_simple_switch_item"
    android:title="@string/forbid_3rd_cookies"
    android:defaultValue="true"
    />
    <CheckBoxPreference
        android:key="@string/pref_key_send_do_not_track"
        android:layout="@layout/pref_simple_switch_item"
        android:title="@string/send_do_not_track"
        android:defaultValue="true"
        />
</androidx.preference.PreferenceScreen>